fix: ui updates
